feat: use idiomatic tsoa Set-Cookie for logout and account destruction
